@@ -1,6 +1,12 @@
+2011-01-31  Tobias Burnus  <burnus@net-b.de>
+
+	PR fortran/47042
+	* gfortran.dg/interface_34.f90: New.
+
 2011-01-30  Paul Thomas  <pault@gcc.gnu.org>
 
 	PR fortran/47523
+	* gfortran.dg/realloc_on_assign_5.f03: New test.
 	* gfortran.dg/realloc_on_assign_5.f03: New test.
 
 2011-01-29  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>
